--- a/spec/acceptance/nodesets/default.yml
+++ b/spec/acceptance/nodesets/default.yml
@@ -1,12 +1,20 @@
 HOSTS:
-  ubuntu-server-12042-x64:
+  ubuntu-1404-amd64-baseimage:
     roles:
       - master
-    platform: ubuntu-server-12.04-amd64
-    box: ubuntu-server-12042-x64-vbox4210-nocm
-    box_url: http://puppet-vagrant-boxes.puppetlabs.com/ubuntu-server-12042-x64-vbox4210-nocm.box
-    hypervisor: vagrant
-
+    platform: ubuntu-14.04-amd64
+#    hypervisor: vagrant
+#    box: puppetlabs/ubuntu-14.04-64-nocm
+#    box_url: https://vagrantcloud.com/puppetlabs/ubuntu-14.04-64-nocm/version/2/provider/virtualbox.box
+    hypervisor: docker
+#    image: sbri/baseimage
+#    provision: false
+    image: phusion/baseimage
+    docker_cmd: '/sbin/my_init'
+#    docker_image_commands:
+#       - '/root/puppet_apply.sh'
 CONFIG:
   log_level: verbose
   type: foss
+  nfs_server: none
+  consoleport: 443
